Added user revoke endpoint
